@@ -29,6 +29,7 @@ $ -> Language fix or change
 04-Feb-2012 Jean-Marie Simonet
  # [#26468] Unable to install multiple updates at once. Thanks Rune and Jeremy
  # [#27918] Date format in /plugins/usr/profile/profile.php is wrong. Thanks Ofer.
+ # [#27870] Joomla 2.5 com_content generates non-valid xhtml. Thanks Mihail
 
 -------------------- 2.5.1 Stable Release [02-Feb-2012] ------------------
 
